--- a/views/login.pug
+++ b/views/login.pug
@@ -2,14 +2,10 @@ extends layout
 
 block content
     -data = data || {}
-    if errors
-        ul.my-errors
-            for error in errors
-                li= error
-    if errorsV
-        ul.my-errors
-            for error in errorsV
-                li= error.msg
+    -error = error || null
+    if error
+        .error
+            p= error
     form(action="." method="POST" class="form-registration")
         h1 ALHENS
         label(for="name") Name:
