--- a/public/css/personal-tab.css
+++ b/public/css/personal-tab.css
@@ -10,3 +10,14 @@ body {
 #ils-form label.question {
     margin-top: 5px;
 }
+.error {
+    margin: 0 auto;
+    padding: 0;
+    content: "! Error : ";
+    color: #f00;
+    text-align: center;
+    font-size: 20px;
+}
+.error p {
+    margin: 0;
+}
