--- a/views/courses.pug
+++ b/views/courses.pug
@@ -1,5 +1,8 @@
 extends header
 block content
+    if error
+        .error
+            p= error
     if(courses)
         .container
             #cards
@@ -14,5 +17,3 @@ block content
                                 a(href=`courses/${course.name}`) Learn
                             else 
                                 p Course completed! Congratulations!
-    else
-        p There was a server error. Please try again later.
