--- a/views/header.pug
+++ b/views/header.pug
@@ -12,7 +12,7 @@ html
 
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-        a.navbar-brand(href='#') ALHENS
+        a.navbar-brand(href='#') ALHELP
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarText' aria-controls='navbarText' aria-expanded='false' aria-label='Toggle navigation')
             span.navbar-toggler-icon
         #navbarText.collapse.navbar-collapse
