--- a/views/login.pug
+++ b/views/login.pug
@@ -7,7 +7,8 @@ block content
         .error
             p= error
     form(action="." method="POST" class="form-registration")
-        h1 ALHENS
+        h1 ALHELP
+        h6 Adaptive Learning for Higher Education based on Learning Preferences
         label(for="name") Name:
         input(
             type="text"
