--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -21,3 +21,28 @@
 .bop td.bot {
     border-bottom: solid 1px black;
 }
+.arrow {
+    max-height: 100%;
+    max-width: 100%;
+    width: 50px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+}
+.fullwh {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+#quiz img{
+    width: 100%;
+}
+.col-2 {
+    padding: 0;
+}
+.col-8 {
+    padding: 0;
+}
