--- a/views/register.pug
+++ b/views/register.pug
@@ -6,7 +6,8 @@ block content
         .error
             p= error
     form(action='/register' method="POST" class="form-registration")
-        h1 ALHENS
+        h1 ALHELP
+        h6 Adaptive Learning for Higher Education based on Learning Preferences
         label(for="name") Name:
         input(
             type="text"
