Test fix on remote

--- a/views/personal-tab.pug
+++ b/views/personal-tab.pug
@@ -7,7 +7,7 @@ block content
             .error
                 p= error
         if ilsResults
-            p You have already completed the Index Learning Style questionnaire. Your results are:
+            p You have already completed the Index Learning Style questionnaire. Your learning preferences are:
             ul
                 li= ilsResults.arIndicator
                 li= ilsResults.siIndicator
