--- a/views/header.pug
+++ b/views/header.pug
@@ -17,14 +17,14 @@ html
             span.navbar-toggler-icon
         #navbarText.collapse.navbar-collapse
             ul.navbar-nav.mr-auto
-                if title == 'Personal Tab'
+                if title == 'Learning Preferences'
                     li.nav-item.active
-                        a.nav-link(href='/personal-tab')
-                            | Personal Tab
+                        a.nav-link(href='/learning-preferences')
+                            | Learning Preferences
                             span.sr-only (current)
                 else
                     li.nav-item
-                        a.nav-link(href='/personal-tab') Personal Tab
+                        a.nav-link(href='/learning-preferences') Learning Preferences
                 if title == 'Courses'
                     li.nav-item.active
                         a.nav-link(href='/courses')
