--- a/views/logic/lbc/section1bm.pug
+++ b/views/logic/lbc/section1bm.pug
@@ -7,11 +7,17 @@ ul
     li Welcome to Tweedy's farm!
     li What's in the pies!
     li It's not as bad as it looks
-p A statement is a sentence that is either true or false (but not both!)
+p
+    | A statement is a sentence that is either 
+    strong true 
+    | or 
+    strong false 
+    | (but not both!)
 
 p False and True are Boolean values: &#120121; = {F,T} (after G. Boole, 1815 - 1864)
 
-p value(5 < 10) = T
-p value("Pigs can fly") = F
-p vaalue("It's not as bad as it looks") = undefined
-p value("The pie is not as badas it looks") = F
+ul
+    li value(5 < 10) = T
+    li value("Pigs can fly") = F
+    li vaalue("It's not as bad as it looks") = undefined
+    li value("The pie is not as badas it looks") = F
