--- a/views/courses.pug
+++ b/views/courses.pug
@@ -10,7 +10,7 @@ block content
                     .card.w-50
                         .card-body
                             h5.card-title= course.name
-                            p= `Lessons completed: ${course.completion}`
+                            p= `Lessons completed: ${course.completion}/${course.numberOfLessons}`
                             -course.name = course.name.toLowerCase()
                             -course.name.replace(/\s/g, '')
                             if(course.completed === false)
@@ -18,5 +18,5 @@ block content
                             else 
                                 p Course completed! Congratulations!
     else 
-        .container 
-            p Please complete the Personal Tab before starting the courses!
+        .container
+            div(class='alert alert-danger m-5' role='alert') Please complete the Learning Preferences tab before starting the courses!
